# Compus_Placement_System

./: Procfile  manage.py  pyproject.toml  requirements.txt
Collegepro/: manage.py
Collegepro/Collegepro/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templatestags/: custom_filters.py
dashboard/: admin.py  forms.py  models.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py
jobs/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
jobs/migrations/: 0001_initial.py
placement_system/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: main.css
static/js/: charts.js  main.js
templates/: base.html  home.html
templates/accounts/: login.html  notifications.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html  resume_builder.html
templates/dashboard/: company_dashboard.html  create_announcement.html  create_event.html  create_season.html  officer_dashboard.html  statistics.html  student_dashboard.html  update_statistics.html
templates/jobs/: applications.html  company_applications.html  company_interviews.html  interviews.html  job_detail.html  job_list.html  manage_jobs.html  officer_applications.html  officer_interviews.html  post_job.html  schedule_interview.html  student_applications.html  student_interviews.html  update_interview.html
